; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_wbmp.c_putmbi.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_wbmp.c_putmbi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @putmbi(i32 %0, void (i32, i8*)* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca void (i32, i8*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store void (i32, i8*)* %1, void (i32, i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %9, align 4
  br label %10

10:                                               ; preds = %14, %3
  %11 = load i32, i32* %9, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp ne i32 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %10
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* %7, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %7, align 4
  %18 = mul nsw i32 7, %16
  %19 = shl i32 127, %18
  %20 = and i32 %15, %19
  %21 = load i32, i32* %9, align 4
  %22 = add nsw i32 %21, %20
  store i32 %22, i32* %9, align 4
  br label %10

23:                                               ; preds = %10
  %24 = load i32, i32* %7, align 4
  %25 = sub nsw i32 %24, 1
  store i32 %25, i32* %8, align 4
  br label %26

26:                                               ; preds = %41, %23
  %27 = load i32, i32* %8, align 4
  %28 = icmp sgt i32 %27, 0
  br i1 %28, label %29, label %44

29:                                               ; preds = %26
  %30 = load void (i32, i8*)*, void (i32, i8*)** %5, align 8
  %31 = load i32, i32* %4, align 4
  %32 = load i32, i32* %8, align 4
  %33 = mul nsw i32 7, %32
  %34 = shl i32 127, %33
  %35 = and i32 %31, %34
  %36 = load i32, i32* %8, align 4
  %37 = mul nsw i32 7, %36
  %38 = ashr i32 %35, %37
  %39 = or i32 128, %38
  %40 = load i8*, i8** %6, align 8
  call void %30(i32 %39, i8* %40)
  br label %41

41:                                               ; preds = %29
  %42 = load i32, i32* %8, align 4
  %43 = add nsw i32 %42, -1
  store i32 %43, i32* %8, align 4
  br label %26

44:                                               ; preds = %26
  %45 = load void (i32, i8*)*, void (i32, i8*)** %5, align 8
  %46 = load i32, i32* %4, align 4
  %47 = and i32 %46, 127
  %48 = load i8*, i8** %6, align 8
  call void %45(i32 %47, i8* %48)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
